@startuml Dead Horse Beatbox
Title "Dead Horse Beatbox"
hide empty members
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

enum Display.LedMode
enum Display.DisplayMode
class Controls.Button{
    +Button(pin)
    +~Button()
    +CheckForPress()
    +IsPressed()
    +JustPressed()
    +JustReleased()
}
class Controls.Encoder{
    +Encoder()
    +~Encoder()
    +IsPressed()
    +JustPressed()
    +JustReleased()
    +GetValue()
    +HasValue()
    +Update()
}
class Display.Led{
    #TurnLightOn()
    #TurnLightOff()
    +Led()
    +~Led()
    +SetMode(mode)
    +UpdateDisplay(pulse)
}
class Display.TempoLed{
    +TempoLed()
    +~TempoLed()
    +UpdateDisplay(pulse)
}
class Controls.Trellis{
    -ClearBuffer()
    +Trellis()
    +~Trellis()
    +SetBuffer(row, step, state)
    +JustReleased(button)
    +ReadSwitches()
    +UpdateDisplay()
}
class Song.Clock{
    +Clock(bpm)
    +~Clock()
    +SetTempo(bpm)
    +OffsetTempo(bpm_offset)
    +IsChangedBpm()
    +SetBpmUnchanged()
    +GetTempo()
    +GetPeriod()
    +IncrementPulse()
    +UpdateTargetPulse()
	+IsNewPulseReadyToProcess()
	+MarkCurrentPulseProcessed()
	+UpdateCurrentPulse()
	+GetLag()
	+GetCurrentPulse()
	+TogglePlayState()
	+GetPlayState()
}
class Display.DisplayView{
   	+DisplayView()
	+~DisplayView()
	+ClearBuffer()
	+SendBuffer()
	+DisplayPageHeader(x, y, current_parameter, tempo)
	+DisplaySplashScreen()
	+DisplayStepBox(step, y, step_enabled, step_accented, step_chance_set, step_retriggered)
	+DisplayStepBackground(y)
	+DisplayStepCursor(step, y)
	+DisplayTrackNumbers(y, current_track)
	+DisplayBargraphBackground(y, height)
	+DisplayBar(y, graph_height, bar_number, bar_value, bar_filled)
}
class Display.DisplayController{
    +DisplayController(p_midi_manager, p_grid, p_pattern, p_clock)
	+~DisplayController()
    +UpdateDisplay(pulse)
    -DisplayTrack(track_number, y)
	-DisplayTrackPlayingBargraph(y, graph_height)
	-DisplaySingleTrackView(track_number)
	-DisplayFourTrackView(track_number)
	-ProcessTrackPlayingBargraphFall()
	-UpdateSelectButtonDisplay()
}
class Grid{
    -DisplayPlayingTracks()
	-DisplaySingleTrackEditMode()
	-CheckForModeSwitch()
	+Grid(p_midi_manager)
	+~Grid()
	+SetGridMode(grid_mode)
	+GetGridMode()
	+GetDefaultGridMode()
	+ProcessGridButton(button_num)
	+ReadSwitches()
	+UpdateDisplay(pulse)
	+TrackSelectButtonIsPressed()
}
class Midi.MidiManager{
    -NoteOn(midi_event)
    -NoteOff(midi_event)
    +MidiManager(p_midi)
	+~MidiManager()
	+AddEvent(midi_event)
	+ProcessPulse(pulse)
	+AllNotesOff()
	+GetEvent(track)

}
Class Midi.MidiEvent
Class Song.Pattern{
    +Pattern(p_midi_manager)
	+~Pattern()
    +GetTrack(track_num)
    +ProcessPulse(pulse)
    +GetCurrentTrackNumber()
	+GetCurrentTrack()
	+GetSelectedStepNumber()
	+SetCurrentTrack(current_track)
	+IncrementCurrentTrack()
	+DecrementCurrentTrack()
}
Class Song.Step{
    +Step()
	+~Step()
	+GetEnableState()
	+ToggleEnableState()
    +GetSkipState()
    +ToggleSkipState()
	+GetAccentState()
	+ToggleAccentState()
	+GetAccentVelocity()
	+ModifyAccentVelocity(accent_velocity_offset)
	+GetChanceState()
	+ToggleChanceState()
	+GetChanceAmount()
	+SetChanceAmount(chance_amount)
	+GetNoteState()
	+ToggleNoteState()
	+GetNoteOffset()
	+SetNoteOffset(note_offset)
	+GetRetriggerState()
	+ToggleRetriggerState()
	+GetRetriggerAmount()
	+SetRetriggerAmount(retrigger_amount)
	+GetRetriggerPulses()
    +SetGateLength(gate_length)
	+GetGateLength()
}
Class Song.Track{
    -Advance()
    +Track(track_num, midi_root_note)
	+~Track()
    +GetStep(step_num)
	+SetMidiManager(p_midi_manager)
	+SetMidiRootNote(midi_root_note)
	+SetTrackDirection(direction)
	+GetCursorPosition()
	+SetCursorPosition(cursor_position)
	+SetMidiChannel(midi_channel)
	+CalculateNumberOfSteps()
	+ ProcessPulse(pulse)
}

Controls.Encoder o-- Controls.Button
Display.DisplayController o-- Display.DisplayMode
Display.DisplayController o-- Display.Led
Display.DisplayController o-- Display.TempoLed
Display.DisplayController o-- Grid
Display.DisplayController o-- Midi.MidiManager : View Track Playing State
Display.DisplayController o-- Song.Pattern
Display.DisplayController o-- Song.Clock
Display.DisplayView o-- Display.DisplayController
Display.Led o-- Display.LedMode
Display.Led <|-- Display.TempoLed
Grid o-- Controls.Button
Grid o-- Controls.Encoder
Grid o-- Controls.Trellis
Grid o-- Song.Clock
Grid o-- Song.Pattern
Midi.MidiManager o-- Midi.MidiEvent
Song.Pattern "1" o-- "many" Song.Track
Song.Track "1" o-- "many" Song.Step
Song.Track o-- Midi.MidiManager : Trigger MIDI Note

@enduml